Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/IP_Shift_Template__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Shift Template</label>
</CustomObject>