Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/fields/Branch_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address__c</fullName>
    <label>Branch Street</label>
    <type>TextArea</type>
</CustomField>