Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/fields/IP_Branch_City__c.field-meta.xml
<CustomField>
    <fullName>IP_Branch_City__c</fullName>
    <label>Branch City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>