Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/fields/IP_Branch_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Branch_Postal_Code__c</fullName>
    <label>Branch Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>