Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/fields/IP_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>IP_Site_Name__c</fullName>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>