Frankbelford/uatv1ba/force-app/main/default/objects/IP_Shift_Template__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>IP_Site_Name__c</columns>
    <columns>IP_Branch_Country__c</columns>
    <columns>IP_Branch_County__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>IP_Branch_City__c</columns>
    <columns>IP_Branch_Postal_Code__c</columns>
    <columns>Branch_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>test</label>
    <language>en_US</language>
</ListView>